--- a/index.html
+++ b/index.html
@@ -6,9 +6,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="navbar">
+        <h4>RIFQI RAFILADY</h4>
+        <div>
+            <div class="word">
+
+                <p>About me</p>
+                <p>Recent Work</p>
+            </div>
+            <p>|</p>
+            <div class="word">
+                <p>Get in Touch</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="header" style="padding: 300px ;text-align: center;">
+        <h1>HELLO WORLD.</h1>
+
+        <p>I'm an adventurer looking for treasure!!</p>
+    </div>
+    <div class="recent-work">
+        <h1 style="text-align: center;">RECENT WORK</h1>
+        <div style="display: flex; justify-content: space-between;padding: 10px 100px; gap: 15px;">
+            <div class="card"
+                style="border: 1px solid black;border-radius: 10px; display: flex;padding: 10px;gap: 10px; ;">
+                <img src="IMG_9647.JPG" alt="" width="200px" height="200px" style="border-radius: 10px;">
+                <div>
+                    <h5>North Celebes Underwater Expedition </h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex enim voluptatem doloribus!
+                        Laboriosam tenetur error aperiam labore consequuntur officiis itaque impedit qui autem!
+                        Laudantium, impedit excepturi? Quod atque animi iure?</p>
+                    <a href="" style="color: black;"> Get more stories >>>></a>
+                </div>
+            </div>
+            <div class="card"
+                style="border: 1px solid black;border-radius: 10px; display: flex;padding: 10px;gap: 10px; ;">
+                <img src="DSCN4303.jpg" alt="" width="200px" height="200px" style="border-radius: 10px;">
+                <div>
+                    <h5>Catching Wave in West java</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex enim voluptatem doloribus!
+                        Laboriosam tenetur error aperiam labore consequuntur officiis itaque impedit qui autem!
+                        Laudantium, impedit excepturi? Quod atque animi iure?</p>
+                    <a href="" style="color: black;"> Get more stories >>>></a>
+                </div>
+            </div>
+            <div class="card"
+                style="border: 1px solid black;border-radius: 10px; display: flex;padding: 10px;gap: 10px; ;">
+                <img src="20181125_200902.jpg" alt="" width="200px" height="200px" style="border-radius: 10px;">
+                <div>
+                    <h5>East Java Hiking</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex enim voluptatem doloribus!
+                        Laboriosam tenetur error aperiam labore consequuntur officiis itaque impedit qui autem!
+                        Laudantium, impedit excepturi? Quod atque animi iure?</p>
+                    <a href="" style="color: black;"> Get more stories >>>></a>
+                </div>
+            </div>
+
+
+
+        </div>
+        <ul style="text-align: center;;">
+            <h2>Incoming Adventure......</h2>
+            <li>Nepal Annapurna Circuit 2023</li>
+            <li>North Sumatera Kayaking 2024</li>
+            <li>Vietnam Hang Son Doong Cave 2024</li>
+            <button>For more info</button>
+        </ul>
+    </div>
+
 
 </body>
 
