--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="navbar">
-        <h4>RIFQI RAFILADY</h4>
+        <div style="border: 1px solid #ededed;padding: 0px 30px;border-radius: 100px;background-color: #ededed;">
+            <h4 style="color: black;">RIFQI RAFIALDY</h4>
+        </div>
         <div>
             <div class="word">
 
@@ -30,8 +32,11 @@
 
         <p>I'm an adventurer looking for treasure!!</p>
     </div>
+    <div class="about-me">
+
+    </div>
     <div class="recent-work">
-        <h1 style="text-align: center;">RECENT WORK</h1>
+        <h1 class="reBar" style="text-align: center;">RECENT WORK</h1>
         <div style="display: flex; justify-content: space-between;padding: 10px 100px; gap: 15px;">
             <div class="card"
                 style="border: 1px solid black;border-radius: 10px; display: flex;padding: 10px;gap: 10px; ;">
