--- a/index.html
+++ b/index.html
@@ -32,11 +32,23 @@
 
         <p>I'm an adventurer looking for treasure!!</p>
     </div>
-    <div class="about-me">
+    <div class="about-me" style="display: flex; gap: 20px ;border: 0;">
+        <div style="background-image:url(20220529_194425.jpg);padding: 0 50px;text-align: center;">
+            <h1 style="color: #ededed;">ABOUT ME..</h1>
+        </div>
+        <div style="background-color: #ededed;">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio amet, quidem qui alias accusamus eius hic
+                repellat culpa ex, tempora ad illum similique illo incidunt, quos inventore exercitationem eligendi
+                animi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum in dolore iusto explicabo rerum obcaecati
+                culpa, eius inventore quos laborum sed nostrum tenetur natus dolorem iste voluptatum cumque eaque
+                quisquam.</p>
+
+        </div>
 
     </div>
-    <div class="recent-work">
-        <h1 class="reBar" style="text-align: center;">RECENT WORK</h1>
+    <div class="recent-work" style="border: 0;">
+        <h1 class="reBar">RECENT WORK</h1>
         <div style="display: flex; justify-content: space-between;padding: 10px 100px; gap: 15px;">
             <div class="card"
                 style="border: 1px solid black;border-radius: 10px; display: flex;padding: 10px;gap: 10px; ;">
@@ -75,13 +87,6 @@
 
 
         </div>
-        <ul style="text-align: center;;">
-            <h2>Incoming Adventure......</h2>
-            <li>Nepal Annapurna Circuit 2023</li>
-            <li>North Sumatera Kayaking 2024</li>
-            <li>Vietnam Hang Son Doong Cave 2024</li>
-            <button>For more info</button>
-        </ul>
     </div>
 
 
