--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h1>HELLO WORLD.</h1>
 
         <p>I'm an adventurer looking for treasure!!</p>
+        <p style="font-size: small;">also currently learning WEB-DEV(!clap!clap!clap)</p>
     </div>
     <div class="about-me" style="display: flex; gap: 20px ;border: 0;">
         <div style="background-image:url(20220529_194425.jpg);padding: 0 50px;text-align: center;">
